CHANGE LOG: NUKEVIET CMS
http://nukeviet.vn

NUKEVIET 5.0.00

- Add parameter $template for function nv_sendmail
- Add hook force_ssl_redirect (#2983)
- New admin theme
- Api system
- Hook, event system

NUKEVIET 4.3.08

- Support php 7.4
- Ckeditor v4.13.1, PHPMailer v6.1.4, Select2 v4.0.12, Chart.js v2.9.3
- Fix delete item in module page #2851
- Save changes when editing admin information
- Allowed users to switch site theme
- Fix bug addtotopics module news from #1517 WhiteHub (thanks for @unfairattaccs Ha Anh Hoang from Viettel)
- Supported unicode email address (fix #2863)
- Update jquery Validate v1.19.1 (fix #2877)
- Fix check admin main module #2842
- Module users: Save last edit time
- Fix generate page tag #2866
- Turn of sitemap module page by default
- Add robot meta tag management function
- Add get_absint function for class Request
- Fix block language theme mobile
- Add logo JSON-LD code for theme default, mobile_default
- Add structured-data for module news, page
- Module user: function user_add: add param showheader, set initdata, add url_back
- Fix view and download pdf module news

NUKEVIET 4.3.07

- Update Ckeditor 4.12.1, Select2 4.0.10
- Fix module users on MySQL 8.0.17
- Module banners: Fix on mysql cluster
- Fix check admin main module
- Change module view permissions
- Fix function nv_site_mods
- Manager blocks: Only show deactive module when debug mode on
- Change logging when admin logout
- Fix user custom fields
- Fix class Database
- Module news: show new news icon in block module.block_news.php
- Module users: Save registration time and time approved to group
- Fix delete module users
- Fix Oauth Google
- Error class: Trade error files
- Fix function nv_check_domain
- Fix plugin/mysql_master_slave.php
- Block bot index on comment link
- Fix show function if module active for config block
- Fix sitemap index not displayed
- Add configuration for turn on/off refer checker utility

NUKEVIET 4.3.06

- Add SMTP configuration check function